rtest/tests/jsr335/Semantics/MethodReferenceAnalysis/ExprMethodReference/ShouldCompile/syntax01/Test.java
// .result=COMPILE_PASS

public class Test {
	
	interface A {
		default void m() { }
		int m2();
	}
	
	public int method1() {
		return 3;
	}
	
	A a = this::method1;
}